# picasso_test_task

./: .gitignore  Dockerfile  Makefile  README.MD  pyproject.toml  setup.cfg
config/: settings.py  urls.py  wsgi.py
docs/: task_desc.md
picasso_parser/: apps.py  parser.py  views.py
templates/: base.html  input.html  parse.html
