[tool.poetry]
name = "picasso-test-ast"
version = "0.1.0"
description = "Picasso Test Assignment"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
requests = "^2.27.1"
aiohttp = "^3.8.1"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
beautifulsoup4 = "^4.11.1"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
